--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Quote of the day</title>
+	<link rel="shortcut icon" href="assets/quotes.svg" type="image/svg">
+	<link rel="stylesheet" href="styles.css">
+	<script defer src="script.js"></script>
+</head>
+<body>
+	<article>
+		<h1>Quote of the day</h1>
+		<p id="quote">Loading quote...</p>
+	</article>
+</body>
+</html>
